--- a/ros_ws/src/base_bringup/package.xml
+++ b/ros_ws/src/base_bringup/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>robot_console</name>
+  <name>base_bringup</name>
   <version>0.1.0</version>
-  <description>Jetson-hosted robot console backend for web control and ROS 2 integration.</description>
+  <description>Jetson base bringup: BBB odometry bridge plus TF publishers.</description>
   <maintainer email="robot@localhost">robot</maintainer>
   <license>Apache-2.0</license>
 
@@ -11,16 +11,10 @@
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>vision_msgs</depend>
-  <depend>tf2_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>std_srvs</depend>
-  <depend>nav2_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>ament_index_python</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
-
-  <exec_depend>python3-aiohttp</exec_depend>
   <exec_depend>python3-yaml</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
