--- a/ros_ws/src/perception/toy_shoe_perception/package.xml
+++ b/ros_ws/src/perception/toy_shoe_perception/package.xml
@@ -9,13 +9,17 @@
   <buildtool_depend>ament_python</buildtool_depend>
 
   <depend>rclpy</depend>
+  <depend>ament_index_python</depend>
   <depend>vision_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
 
   <exec_depend>python3-yaml</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>python3-opencv</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
